--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description" : "Snap photos from the Raspberry Pi Camera and upload them to AWS S3 at a set interval",
   "version": "0.1.0",
   "private": false,
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/jwdotjs/raspberry-pi-camera.git"
+  },
   "scripts": {
     "start": "node index"
   },
